# vergen

./: .clippy.toml  .emacs.bmk  .gitignore  .gitlab-ci.yml  .gitmodules  .pants-ignore  .travis.yml  Cargo.toml  MIGRATING_v8_to_v9.md  README.md  Rakefile.toml  appveyor.yml  audit.toml  build.rs  dependabot.yml  run_all.fish  run_clippy.fish  run_code_cov.fish  run_docs.fish  tarpaulin.toml
.cargo/: audit.toml
.github/: FUNDING.yml  codecov.yml  dependabot.yml
.github/workflows/: audit.yml  main.yml  pretty.yml  static.yml  tier2.yml  vergen.yml  vergen_git2.yml  vergen_gitcl.yml  vergen_gix.yml  vergen_lib.yml  vergen_pretty.yml
fakeworktree/: blahgit
legacy/: git.rs
repo_util/: Cargo.toml  build.rs
repo_util/src/: lib.rs
repo_util/src/repo/: mod.rs
scripts/: id_rsa.enc  install-kcov.sh  run-tests.sh  run_all.fish  run_all.ps1  run_build.fish  run_build.ps1  run_clippy.fish  run_clippy.ps1  run_code_cov.fish  run_code_cov.ps1  run_docs.ps1  run_pretty.fish  run_test.fish  run_test.ps1  travis-doc-upload.cfg
side_load/: Cargo.toml
src/: builder.rs  codegen.rs  config.rs  constants.rs  emitter.rs  envvar.rs  error.rs  gen.rs  key.rs  lib.rs  utils.rs
src/error/: codes.rs  mod.rs  sources.rs
src/feature/: build.rs  cargo.rs  git.rs  mod.rs  rustc.rs  si.rs
src/feature/git/: cmd.rs  git2.rs  gix.rs  mod.rs
src/legacy/feature/: si.rs
src/output/: codegen.rs  envvar.rs  mod.rs
src/rustc/: mod.rs
test_util/: Cargo.toml
test_util/src/: lib.rs  utils.rs
test_util/src/repo/: mod.rs
testdata/gitdir/: HEAD
tests/: build_output.rs  cargo_output.rs  git_output.rs  lib.rs  rustc_output.rs  sysinfo_output.rs
vergen/: Cargo.toml  build.rs  tarpaulin.toml
vergen-fmt/: Cargo.toml  build.rs  tarpaulin.toml
vergen-fmt/src/: fmt.rs  lib.rs
vergen-fmt/src/fmt/: display.rs  mod.rs  trace.rs
vergen-git2/: Cargo.toml  build.rs
vergen-git2/src/: lib.rs
vergen-git2/src/git2/: mod.rs
vergen-git2/tests/: git_output.rs
vergen-gitcl/: Cargo.toml  build.rs
vergen-gitcl/src/: lib.rs
vergen-gitcl/src/gitcl/: mod.rs
vergen-gitcl/tests/: git_output.rs
vergen-gix/: Cargo.toml
vergen-gix/src/: gix.rs  lib.rs
vergen-gix/src/gix/: mod.rs
vergen-gix/tests/: git_output.rs
vergen-lib/: Cargo.toml  README.md  build.rs  tarpaulin.toml
vergen-lib/src/: config.rs  constants.rs  emitter.rs  entries.rs  git_config.rs  keys.rs  lib.rs  utils.rs
vergen-pretty/: Cargo.toml  README.md  build.rs  tarpaulin.toml
vergen-pretty/src/: lib.rs  utils.rs
vergen-pretty/src/header/: mod.rs
vergen-pretty/src/pretty/: mod.rs  prefix.rs  suffix.rs
vergen-pretty/src/pretty/feature/: bincode.rs  color.rs  mod.rs  rkyv_support.rs  serde.rs  trace.rs
vergen/src/: constants.rs  emitter.rs  key.rs  lib.rs  utils.rs
vergen/src/feature/: build.rs  cargo.rs  mod.rs  rustc.rs  si.rs
vergen/src/feature/git/: cmd.rs  git2.rs  gix.rs  mod.rs
vergen/tests/: build_output.rs  cargo_output.rs  git_output.rs  rustc_output.rs  sysinfo_output.rs
