[workspace]
resolver = "2"

members = [
    "test_util",
    "vergen",
    "vergen-git2",
    "vergen-gitcl",
    "vergen-gix",
    "vergen-lib",
    "vergen-pretty",
]

[workspace.dependencies]
anyhow = "1.0.100"
bon = "3.8.2"
gix = { version = "0.78.0", default-features = false, features = [
    "revision",
    "worktree-mutation",
    "blocking-network-client",
] }
rand = { version = "0.9.2" }
regex = { version = "1.12.2" }
rustversion = "1.0.22"
serial_test = "3.3.1"
temp-env = "0.3.6"
time = { version = "0.3.46", features = [
    "formatting",
    "local-offset",
    "parsing",
] }
