[package]
name = "repo_util"
version = "0.1.0"
edition = "2021"

[features]
unstable = []

[dependencies]
anyhow = "1.0.98"
gix = { version = "0.71.0", default-features = false, features = [
    "revision",
    "worktree-mutation",
    "blocking-network-client",
] }
rand = "0.9.0"

[dev-dependencies]
serial_test = "3.2.0"
temp-env = "0.3.6"

[build-dependencies]
rustversion = "1.0.20"
