[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Generate 'cargo:rustc-env' instructions via 'build.rs' for use in your code via the 'env!' macro"
documentation = "https://docs.rs/vergen"
edition = "2021"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
name = "test_util"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "0.1.1"

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = []
always_include = ["unstable"]

[features]
default = []
unstable = []
repo = ["gix", "rand"]

[dependencies]
anyhow = { version = "1.0.79" }
gix = { version = "0.61.0", default-features = false, features = [
    "revision",
    "worktree-mutation",
    "blocking-network-client",
], optional = true}
lazy_static = "1.4.0"
rand = { version = "0.8.5", optional = true }
temp-env = "0.3.6"

[dev-dependencies]
serial_test = "3.0.0"

[build-dependencies]
rustversion = "1.0.14"
