[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Generate 'cargo:rustc-env' instructions via 'build.rs' for use in your code via the 'env!' macro"
documentation = "https://docs.rs/vergen"
edition = "2024"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
name = "test_util"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "1.0.0-alpha.1"

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = []
always_include = ["unstable"]

[features]
default = []
unstable = []
repo = ["gix", "rand"]

[dependencies]
anyhow = { workspace = true }
gix = { workspace = true, optional = true}
rand = { workspace = true, optional = true }
temp-env = { workspace = true }

[dev-dependencies]
serial_test = { workspace =  true }

[build-dependencies]
rustversion = { workspace = true }
