[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Generate 'cargo:rustc-env' instructions via 'build.rs' for use in your code via the 'env!' macro"
documentation = "https://docs.rs/vergen"
edition = "2021"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
name = "vergen-git2"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "0.1.0"

[package.metadata.cargo-all-features]
denylist = [
    "unstable",
]

[features]
default = []
build = ["vergen/build"]
cargo = ["vergen/cargo"]
rustc = ["vergen/rustc"]
unstable = []
si = ["vergen/si"]

[dependencies]
anyhow = "1.0.79"
git2-rs = { version = "0.18.0", package = "git2", default-features = false }
time = { version = "0.3.23", features = [
    "formatting",
    "local-offset",
    "parsing",
] }
vergen = { path = "../vergen", default-features = false }
vergen-lib = { version = "0.1.0", path = "../vergen-lib", features = ["git"] }

[build-dependencies]
rustversion = "1.0.14"

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1.10.3"
serial_test = "3.0.0"
temp-env = "0.3.6"
test_util = { path = "../test_util", features = ["repo"] }
