[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Generate 'cargo:rustc-env' instructions via 'build.rs' for use in your code via the 'env!' macro"
documentation = "https://docs.rs/vergen"
edition = "2024"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
name = "vergen-gitcl"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "2.0.0-alpha.1"

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["emit_and_set", "unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = ["emit_and_set"]
always_include = ["unstable"]

[features]
default = []
build = ["vergen/build"]
cargo = ["vergen/cargo"]
cargo_metadata = ["vergen/cargo_metadata"]
emit_and_set = ["vergen-lib/emit_and_set"]
rustc = ["vergen/rustc"]
unstable = ["vergen/unstable", "vergen-lib/unstable"]
si = ["vergen/si"]

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
time = { workspace = true }
vergen = { version = "10.0.0-alpha.1", path = "../vergen", default-features = false }
vergen-lib = { version = "1.0.0-alpha.1", path = "../vergen-lib", features = ["git"] }

[build-dependencies]
rustversion = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
serial_test = { workspace =  true }
temp-env = { workspace = true }
test_util = { path = "../test_util", features = ["repo", "unstable"] }

[package.metadata.docs.rs]
features = ["build", "cargo", "emit_and_set", "rustc", "si"]
rustdoc-args = ["--cfg", "docsrs"]
