[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Generate 'cargo:rustc-env' instructions via 'build.rs' for use in your code via the 'env!' macro"
documentation = "https://docs.rs/vergen"
edition = "2021"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
name = "vergen-gix"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "1.0.0"

[package.metadata.cargo-all-features]
denylist = ["emit_and_set", "unstable"]
skip_optional_dependencies = true

[features]
default = []
build = ["vergen/build"]
cargo = ["vergen/cargo"]
emit_and_set = ["vergen/emit_and_set"]
rustc = ["vergen/rustc"]
unstable = ["vergen/unstable"]
si = ["vergen/si"]

[dependencies]
anyhow = "1.0.79"
derive_builder = "0.13.0"
gix = { version = "0.58.0", default-features = false, features = [
    "revision",
    "interrupt",
] }
time = { version = "0.3.23", features = [
    "formatting",
    "local-offset",
    "parsing",
] }
vergen = { version = "9.0.0-beta.0", path = "../vergen", default-features = false }
vergen-lib = { version = "0.1.0", path = "../vergen-lib", features = ["git"] }

[build-dependencies]
rustversion = "1.0.14"

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
test_util = { path = "../test_util", features = ["repo"] }
serial_test = "3.0.0"
temp-env = "0.3.6"

[package.metadata.docs.rs]
features = ["build", "cargo", "emit_and_set", "rustc", "si"]
rustdoc-args = ["--cfg", "docsrs"]
