[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Generate 'cargo:rustc-env' instructions via 'build.rs' for use in your code via the 'env!' macro"
documentation = "https://docs.rs/vergen"
edition = "2021"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
rust-version = "1.78.0"
name = "vergen-gix"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "1.0.3"

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["emit_and_set", "unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = ["emit_and_set"]
always_include = ["unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "llvm-cov"
always_deny = ["emit_and_set"]
always_include = ["unstable"]

[features]
default = []
build = ["vergen/build"]
cargo = ["vergen/cargo"]
emit_and_set = ["vergen-lib/emit_and_set"]
rustc = ["vergen/rustc"]
unstable = ["vergen/unstable", "vergen-lib/unstable"]
si = ["vergen/si"]

[dependencies]
anyhow = "1.0.93"
derive_builder = "0.20.2"
gix = { version = "0.68.0", default-features = false, features = [
    "revision",
    "interrupt",
] }
time = { version = "0.3.36", features = [
    "formatting",
    "local-offset",
    "parsing",
] }
vergen = { version = "9.0.2", path = "../vergen", default-features = false }
vergen-lib = { version = "0.1.5", path = "../vergen-lib", features = ["git"] }

[build-dependencies]
rustversion = "1.0.18"

[dev-dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
test_util = { path = "../test_util", features = ["repo", "unstable"] }
serial_test = "3.2.0"
temp-env = "0.3.6"

[package.metadata.docs.rs]
features = ["build", "cargo", "emit_and_set", "rustc", "si"]
rustdoc-args = ["--cfg", "docsrs"]
