[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Common code used to support the vergen libraries"
documentation = "https://docs.rs/vergen-lib"
edition = "2024"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
name = "vergen-lib"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "9.1.0"

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = []
always_include = ["unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "llvm-cov"
always_deny = ["emit_and_set"]
always_include = ["unstable"]

[features]
default = []
build = []
cargo = []
emit_and_set = []
git = []
rustc = []
unstable = []
si = []

[dependencies]
anyhow = "1.0.100"
derive_builder = "0.20.2"

[build-dependencies]
rustversion = "1.0.22"

[dev-dependencies]
serial_test = "3.2.0"
temp-env = "0.3.6"
test_util = { path = "../test_util", features = ["unstable"] }

[package.metadata.docs.rs]
features = ["build", "cargo", "git", "rustc", "si"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }