[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Output vergen information in a formatted manner"
documentation = "https://docs.rs/vergen-pretty"
edition = "2024"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
name = "vergen-pretty"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "0.3.2"

[package.metadata.cargo-all-features]
denylist = ["console", "lazy_static", "serde", "tracing", "unstable", "vergen", "rand"]

[features]
default = []
unstable = []
color = ["console"]
header = ["console", "rand"]
trace = ["tracing"]
__vergen_test = ["vergen"]

[dependencies]
anyhow = "1.0.100"
console = { version = "0.16.1", optional = true }
convert_case = "0.8.0"
derive_builder = "0.20.2"
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
tracing = { version = "0.1.41", features = [
    "max_level_trace",
    "release_max_level_trace",
], optional = true }

[build-dependencies]
anyhow = "1.0.100"
rustversion = "1.0.22"
vergen = { version = "8.3.5", path = "../vergen", features = [
    "build",
    "cargo",
    "git",
    "gix",
    "rustc",
    "si",
], optional = true }

[dev-dependencies]
regex = "1.11.3"
serde_json = "1.0.145"
tracing-subscriber = { version = "=0.3.19", features = ["fmt"] }

[package.metadata.docs.rs]
features = ["color", "header", "serde", "trace"]
rustdoc-args = ["--cfg", "docsrs"]
