[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Output vergen information in a formatted manner"
documentation = "https://docs.rs/vergen-pretty"
edition = "2024"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
name = "vergen-pretty"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "10.0.0-beta.5"

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["unstable"]
always_include = ["__vergen_test"]
include_optional = ["bincode", "serde"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = []
always_include = ["__vergen_test", "unstable"]
include_optional = ["bincode", "serde"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly-empty"
always_deny = []
always_include = ["__vergen_empty_test", "unstable"]
include_optional = ["bincode", "serde"]

[features]
default = []
unstable = ["vergen-gix/unstable"]
color = ["console"]
header = ["console", "rand"]
trace = ["tracing"]
__vergen_test = ["vergen-gix", "vergen-gix/unstable"]
__vergen_empty_test = ["vergen-gix", "vergen-gix/unstable"]

[dependencies]
anyhow = { workspace = true }
bincode = { version = "=2.0.1", optional = true }
bon = { workspace = true }
console = { version = "0.16.2", optional = true }
convert_case = "0.10.0"
rand = { workspace = true, optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
tracing = { version = "0.1.44", features = [
    "max_level_trace",
    "release_max_level_trace",
], optional = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { version = "10.0.0-beta.5", path = "../vergen-gix", features = [
    "build",
    "cargo",
    "rustc",
    "si",
], optional = true }

[dev-dependencies]
regex = { workspace = true }
serde_json = "1.0.149"
tracing-subscriber = { version = "=0.3.19", features = ["fmt"] }

[package.metadata.docs.rs]
features = ["bincode", "color", "header", "serde", "trace"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
