[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Output vergen information in a formatted manner"
documentation = "https://docs.rs/vergen-pretty"
edition = "2024"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
name = "vergen-pretty"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "9.1.0"

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["unstable"]
always_include = ["__vergen_test"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = []
always_include = ["__vergen_test", "unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly-empty"
always_deny = []
always_include = ["__vergen_empty_test", "unstable"]

[features]
default = []
unstable = ["vergen-gix/unstable"]
color = ["console"]
header = ["console", "rand"]
trace = ["tracing"]
__vergen_test = ["vergen-gix", "vergen-gix/unstable"]
__vergen_empty_test = ["vergen-gix", "vergen-gix/unstable"]

[dependencies]
anyhow = "1.0.100"
console = { version = "0.16.2", optional = true }
convert_case = "0.10.0"
derive_builder = "0.20.2"
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
tracing = { version = "0.1.44", features = [
    "max_level_trace",
    "release_max_level_trace",
], optional = true }

[build-dependencies]
anyhow = "1.0.100"
rustversion = "1.0.22"
vergen-gix = { version = "9.1.0", path = "../vergen-gix", features = [
    "build",
    "cargo",
    "rustc",
    "si",
], optional = true }

[dev-dependencies]
regex = "1.12.2"
serde_json = "1.0.149"
tracing-subscriber = { version = "=0.3.19", features = ["fmt"] }

[package.metadata.docs.rs]
features = ["color", "header", "serde", "trace"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }