[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Generate 'cargo:rustc-env' instructions via 'build.rs' for use in your code via the 'env!' macro"
documentation = "https://docs.rs/vergen"
edition = "2024"
homepage = "https://github.com/rustyhorde/vergen"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
name = "vergen"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "10.0.0-beta.4"

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["emit_and_set", "unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = ["emit_and_set"]
always_include = ["unstable"]

[features]
default = []
build = ["time", "vergen-lib/build"]
cargo = ["vergen-lib/cargo"]
cargo_metadata = ["dep:cargo_metadata", "regex", "cargo"]
rustc = ["rustc_version", "vergen-lib/rustc"]
si = ["sysinfo", "vergen-lib/si"]
unstable = ["vergen-lib/unstable"]
emit_and_set = ["vergen-lib/emit_and_set"]

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
cargo_metadata = { version = "0.23.0", optional = true }
regex = { workspace = true, optional = true }
rustc_version = { version = "0.4.1", optional = true }
sysinfo = { version = "0.37.2", optional = true }
time = { workspace = true, optional = true }
vergen-lib = { version = "10.0.0-beta.4", path = "../vergen-lib" }

[build-dependencies]
rustversion = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
test_util = { version = "10.0.0-beta.4", path = "../test_util", features = ["unstable"] }
serial_test = { workspace = true }
temp-env = { workspace = true }

[package.metadata.docs.rs]
features = ["build", "cargo", "emit_and_set", "rustc", "si"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
